fix modify password bug and change base64 lib